# onebot-message-source

./: .gitignore  .gitmodules  Cargo.toml
src/: bot.rs  config.rs  main.rs
src/handlers/: mod.rs  recv.rs  send.rs
