[package]
name = "onebot-message-source"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.0",features = ["rt-multi-thread"] }
tracing = "0.1"
walle-core = { path = "walle-core",features = ["v11","websocket"] }
walle-v11 = { path = "walle-core/walle-v11" }
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "fmt"] }
