[package]
name = "onebot-message-source"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.18.0",features = ["rt-multi-thread"] }
futures = "0.3.21"
tracing = "0.1"
walle-core = { path = "walle-core",features = ["v11","websocket"] }
walle-v11 = { path = "walle-core/walle-v11" }
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "fmt"] }
async-trait = "0.1.53"
colored = "2.0.0"
anyhow = "1.0.57"
either = "1.6.1"
educe = {version = "0.4.18", default-features = false,features = ["Default"]}
arcstr = { version = "1.1.3", features = ["serde"] }
yaml-rust = "0.4.5"
base64-url = "1.4.13"

dashmap = { version = "5.1.0",features = ["serde"] }
linked-hash-map = "0.5.4"
once_cell = "1.8.0"
log = "0.4.16"
# serialization
serde = { version = "1.0.130",default-features = false,features = ["derive","rc"] }
serde_yaml = "0.8.21"
# mesagisto
nats = "0.19.0"
mesagisto-client = { rev = "33bc09", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git"}
# mesagisto-client = { path = "../../mesagisto-client/rust" }
automatic-config = { rev = "ac1cd3ac1a225e8b7f1c80d55fe7e5ee34fad81d", git = "https://github.com/Itsusinn/automatic-config-rs.git" }
#automatic-config = { path = "/code/automatic-config-rs" }

singleton = { git = "https://github.com/Itsusinn/singleton-rs.git", rev = "bee321c" }
# singleton = { path = "/code/singleton-rs" }

[profile.release]
lto = true
codegen-units = 1
