[package]
name = "onebot-message-source"
version = "0.1.0"
edition = "2021"


[features]
default = ["color"]
no-color = ["colored/no-color"]
color = ["tracing-subscriber/ansi"]


[dependencies]

futures = "0.3.21"
walle-core = { version = "0.5.4",features = ["app","websocket"] }

anyhow = "1.0.57"
either = "1.6.1"
educe = {version = "0.4.18", default-features = false,features = ["Default"]}
arcstr = { version = "1.1.3", features = ["serde"] }

base64-url = "1.4.13"

dashmap = { version = "5.1.0",features = ["serde"] }
linked-hash-map = "0.5.4"
once_cell = "1.12.0"
# async
async-trait = "0.1.53"
tokio = { version = "1.18.0",features = ["rt-multi-thread"] }

# logging
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", default-features = false, features = ["tracing-log", "std", "local-time","fmt"] }
log = "0.4.17"
colored = "2.0.0"
time = { version = "0.3.9", features = ["macros", "local-offset"] }
# serialization
serde = { version = "1.0.130",default-features = false,features = ["derive","rc"] }
serde_yaml = "0.8.21"
yaml-rust = "0.4.5"
# mesagisto
nats = "0.20.0"
mesagisto-client = { branch = "master", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git"}
# mesagisto-client = { path = "../../mesagisto-client/rust" }
automatic-config = { branch = "master", git = "https://github.com/Itsusinn/automatic-config-rs.git" }
# automatic-config = { path = "/code/automatic-config-rs" }

singleton = { branch = "master",git = "https://github.com/Itsusinn/singleton-rs.git"}
# singleton = { path = "/code/singleton-rs" }

[profile.release]
lto = true
codegen-units = 1
